initial-setup.yaml
# initial-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod-namespace
  labels:
    name: prod-namespace
---
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  namespace: dev-namespace
  labels:
    app: web
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  namespace: dev-namespace
  labels:
    app: db
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "while true; do sleep 3600; done"]
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: prod-namespace
  labels:
    app: test
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "while true; do sleep 3600; done"]
