allow-db-to-web-namespace.yaml
# allow-db-to-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-to-web-namespace
  namespace: dev-namespace
spec:
  podSelector:
    matchLabels:
      app: web # このポリシーはweb-podに適用される
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: prod-namespace
