deny-all-ingress.yaml
# deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-pod-deny-all-ingress
  namespace: dev-namespace
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
